--- a/src/index.css
+++ b/src/index.css
@@ -46,11 +46,11 @@ nav {
 
 .nav__brand h1 {
   color: var(--clr-black);
-
+  margin-right: 15px;
   font-family: "Signika";
   font-size: 1.50em;
   font-weight: 700;
-  letter-spacing: -1px;
+  letter-spacing: 0px;
 }
 
 .nav__links {
@@ -62,7 +62,7 @@ nav {
 }
 
 .nav__links li {
-  margin: 0 10px;
+  margin: 0 15px;
 }
 
 .nav__links li a {
